--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,20 @@
+/* Fix for Trix editor with Bulma */
+trix-editor {
+  min-height: 10em;
+  background: #fff;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
+  padding: 1em;
+  font-size: 1rem;
+  color: #363636;
+  box-shadow: none;
+}
+
+trix-editor[contenteditable="false"] {
+  background: #f5f5f5;
+  opacity: 0.6;
+  pointer-events: none;
+}
 /*
  * This is a manifest file that'll be compiled into application.css.
  *
@@ -8,8 +25,6 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
-@import "bulma";
-@import "bulma.css";
 /*
  *= require actiontext
  */
