--- a/app/views/diary_entries/show.html.erb
+++ b/app/views/diary_entries/show.html.erb
@@ -61,3 +61,23 @@
     </div>
   </div>
 <% end %>
+
+<!-- Action Buttons -->
+<div class="field is-grouped mt-5">
+  <div class="control">
+    <%= link_to "Edit Entry", edit_diary_entry_path(@diary_entry), 
+        class: "button is-primary is-medium" %>
+  </div>
+  <div class="control">
+    <%= link_to "Delete Entry", diary_entry_path(@diary_entry), 
+        method: :delete, 
+        class: "button is-danger is-medium",
+        data: { 
+          confirm: "Are you sure you want to delete this diary entry? This action cannot be undone." 
+        } %>
+  </div>
+  <div class="control">
+    <%= link_to "Back to All Entries", diary_entries_path, 
+        class: "button is-light is-medium" %>
+  </div>
+</div>
