--- a/app/views/diary_entries/show.html.erb
+++ b/app/views/diary_entries/show.html.erb
@@ -1,5 +1,14 @@
 <p style="color: green"><%= notice %></p>
 
+<% unless user_signed_in? %>
+  <!-- Demo Mode Banner -->
+  <div class="notification is-warning is-light mb-4">
+    <strong>👀 You're viewing demo content!</strong><br>
+    This is a sample diary entry to show you what Digital Diary looks like. 
+    <%= link_to "Sign up free", new_user_registration_path, class: "has-text-weight-bold" %> to start your own personal diary!
+  </div>
+<% end %>
+
 <% if @thought_of_the_day %>
   <!-- Thought of the Day block -->
   <div class="notification is-info is-light mb-4">
@@ -64,18 +73,26 @@
 
 <!-- Action Buttons -->
 <div class="field is-grouped mt-5">
-  <div class="control">
-    <%= link_to "Edit Entry", edit_diary_entry_path(@diary_entry), 
-        class: "button is-primary is-medium" %>
-  </div>
-  <div class="control">
-    <%= link_to "Delete Entry", diary_entry_path(@diary_entry), 
-        method: :delete, 
-        class: "button is-danger is-medium",
-        data: { 
-          confirm: "Are you sure you want to delete this diary entry? This action cannot be undone." 
-        } %>
-  </div>
+  <% if user_signed_in? %>
+    <div class="control">
+      <%= link_to "Edit Entry", edit_diary_entry_path(@diary_entry), 
+          class: "button is-primary is-medium" %>
+    </div>
+    <div class="control">
+      <%= link_to "Delete Entry", diary_entry_path(@diary_entry), 
+          method: :delete, 
+          class: "button is-danger is-medium",
+          data: { 
+            confirm: "Are you sure you want to delete this diary entry? This action cannot be undone." 
+          } %>
+    </div>
+  <% else %>
+    <!-- Demo mode - show sign up encouragement -->
+    <div class="control">
+      <%= link_to "Start Your Own Diary - Sign Up Free!", new_user_registration_path, 
+          class: "button is-primary is-medium" %>
+    </div>
+  <% end %>
   <div class="control">
     <%= link_to "Back to All Entries", diary_entries_path, 
         class: "button is-light is-medium" %>
