--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,8 +7,32 @@
         <h2 class="subtitle is-3">Your thoughts, memories, and experiences - beautifully preserved</h2>
         <div class="buttons is-centered mt-5">
           <%= link_to "Start Free Trial", new_user_registration_path, class: "button is-primary is-large" %>
-          <%= link_to "View Demo", diary_entries_path, class: "button is-light is-large" %>
+          <%= link_to "View Live Demo", diary_entries_path, class: "button is-success is-large" %>
           <%= link_to "See Pricing", pricing_subscriptions_path, class: "button is-link is-large" %>
+        </div>
+        
+        <!-- Demo Stats Preview -->
+        <div class="notification is-primary is-light mt-5">
+          <div class="content has-text-centered">
+            <h4 class="title is-4">🎯 Try Our Live Demo</h4>
+            <p>Explore a real diary with <strong><%= @total_demo_entries %> actual entries</strong> to see exactly how Digital Diary works!</p>
+            <div class="columns is-mobile has-text-centered mt-3">
+              <div class="column">
+                <p class="title is-5 has-text-primary"><%= @total_demo_entries %></p>
+                <p class="subtitle is-6">Demo Entries</p>
+              </div>
+              <div class="column">
+                <p class="title is-5 has-text-info">
+                  <%= @demo_entries&.joins(:images_attachments)&.distinct&.count || 0 %>
+                </p>
+                <p class="subtitle is-6">With Photos</p>
+              </div>
+              <div class="column">
+                <p class="title is-5 has-text-success">Real Data</p>
+                <p class="subtitle is-6">Not Fake!</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
